--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "dependencies": {
     "@types/express": "4.0.38",
     "restyped": "1.1.0"
+  },
+  "devDependencies": {
+    "typescript": "^3.0.3"
   }
 }
